Add redirect + splash screen

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: null
 
 subject: Home
-
+redirect_to: http://beta.jasonsclassroom.com/
 ---
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
